--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
         "merge-stream": "^1.0.1",
         "axios": ">=0.21.1",
         "xmlhttprequest-ssl": ">=1.6.2",
-        "ua-parser-js": ">=0.7.24"
+        "ua-parser-js": ">=0.7.24",
+        "socket.io-parser": ">=4.0.5",
+        "scss-tokenizer": ">=0.4.3"
     }
 }
