--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
         "xmlhttprequest-ssl": ">=1.6.2",
         "ua-parser-js": ">=0.7.24",
         "socket.io-parser": ">=4.0.5",
-        "scss-tokenizer": ">=0.4.3"
+        "scss-tokenizer": ">=0.4.3",
+        "engine.io": ">=3.6.0"
     }
 }
